= 1.2.28 - 2025-10-TBD =
* Add Block Visibility support for non FSE themes - ADDED

= 1.2.27 - 2025-10-16 =
* Hover style is not working on clone BS element - FIXED

= 1.2.26 - 2025-08-28 =
* In some cases it shows $ml_md not found notice - FIXED

= 1.2.25 - 2025-08-07 =
* Divi 5 don't renders add shortcode button in code block - FIXED

= 1.2.24 - 2025-07-03 =
* Divi 5 don't renders add shortcode button in text block - FIXED

= 1.2.23 - 2025-06-18 =
* Single quote in setting default attribute causes JS error - FIXED

= 1.2.22 - 2025-04-17 =
* Extra sanitation for widget titles - ADDED

= 1.2.21 - 2025-03-27 =
* Added more container class options for creating list groups - ADDED

= 1.2.20 - 2025-03-20 =
* Advance Search Filters options are not available in Bricks GD > Search element - FIXED
* GD > Map bricks element don't render map zoom control - FIXED

= 1.2.19 - 2025-02-20 =
* BS > Nav Item hide block condition is not working - FIXED

= 1.2.18 - 2025-02-06 =
* Fixed processing of rules with missing validators - FIXED

= 1.2.17 - 2025-01-09 =
* Added extensibility for block visibility field settings via hooks, filters and jQuery triggers - ADDED

= 1.2.16 - 2024-12-12 =
* Changes for Bricks output class to add AyeCode UI class and show icons as icon picker - ADDED

= 1.2.15 - 2024-11-28 =
* Class added for Bricks element conversion - ADDED

= 1.2.14 - 2024-11-12 =
* widget_title_tag param now filtered by allowed tags list - CHANGED

= 1.2.13 - 2024-10-10 =
* sd_template_page_options() not allowing child page selection - FIXED
* Filter added `sd_template_page_options_limit` to adjust the 500 pages limit - ADDED
* Multiple blocks with taxonomy linking feature can cause ajax query to loop and freeze browser - FIXED
* __experimentalGetPreviewDeviceType is deprecated - FIXED

= 1.2.10 - 2024-10-08 =
* Selecting multiple similar blocks with different settings can cause editor to freeze - FIXED
* Blocks with content already set will not call a refresh on load - CHANGED