@@ -1,5 +1,6 @@
 = 1.2.28 - 2025-10-TBD =
 * Add Block Visibility support for non FSE themes - ADDED
+* Detect Breakdance builder preview - ADDED
 
 = 1.2.27 - 2025-10-16 =
 * Hover style is not working on clone BS element - FIXED
